This this the changelog file for the Pothos GUI toolkit.

Release 0.3.2 (pending)
==========================

- Configurable block render mode for displaying event ports inline
- Save state for debug graphics (connection points & bounding boxes)

Release 0.3.1 (2016-03-06)
==========================

- Fix separators in makeIconPath() for setStyleSheet()
- Added missing libpoco-dev to debian Build-Depends

Release 0.3.0 (2015-12-16)
==========================

- Added debian packaging support for GUI designer
- Support ghost blocks when description is missing
- Save active edit tab in the block properties panel
- Added clear button to log message window
- Support conditional parameter preview mode
- Fix for size grip in GraphWidgetContainer on OSX
- Fixes for missing title bar and menu bar on OSX
- Cross platform styler for instances of QFormLayout
- Graph editor tabs setDocumentMode() for OSX appearance
- Ignore key press events from graph widgets with focus
- Switch logger display to QPlainTextEdit for performance

Release 0.2.2 (2015-12-07)
==========================

- Fix empty signal slot connection to display text label
- Fix QApplication exit error by giving QSettings a parent

Release 0.2.1 (2015-08-26)
==========================

- SpinBox edit widgets cache value to fix formatting bug
- Extra try/catch for system info because JSON can throw
- Hide message window tab bar until multiple tabs are used
- Fix duplicate ID bug than can occur during handle paste
- Fix enable handler for redundant events and widget objects
- Skip rotation event when no graph objects are selected
- Fixed handling of disabled block with property errors
- Topology stats use tree view to collapse/hide stat data
- Restore the last displayed graph page when reset/undoing
- Splash screen prints the current saved graph loading
- Fix graph editor handle cut to check for active graph
- Topology evaluator connections check for port existence

Release 0.2.0 (2015-06-17)